@@ -1,3 +1,8 @@
+Sep 13, 2004
+
+  * ADDED: namespaces(-NameSpaces) option to load_rdf/3 and process_rdf/3
+    to query the document namespace declarations.
+
 Aug 13, 2004
 
   * MODIFIED: load_rdf/3 no longer returns resources as Prefix:URI, but
